// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Macro Tracker with props 1`] = `
<div
  className="macro-tracker card"
>
  <div
    className="macro-tracker__header"
  >
    <h2>
      Macros
    </h2>
    <button
      className="macro-tracker__menu-button"
      onClick={[Function]}
      type="button"
    >
      <DotsIcon
        fill="#fff"
        size={24}
      />
    </button>
  </div>
  <PieChart
    data={
      Array [
        Object {
          "amount": 157,
          "macro": "protein",
        },
        Object {
          "amount": 130,
          "macro": "carbs",
        },
        Object {
          "amount": 80,
          "macro": "fat",
        },
        Object {
          "amount": 333,
          "macro": "leftover",
        },
      ]
    }
  />
  <div
    className="macro-tracker__macros"
  >
    <div
      className="macro-tracker__macro"
      key="protein"
    >
      <div
        className="macro-tracker__macro-key"
        id="macro-key-0"
      />
      <p>
        <span>
          protein
        </span>
         157 of 340 grams
      </p>
    </div>
    <div
      className="macro-tracker__macro"
      key="carbs"
    >
      <div
        className="macro-tracker__macro-key"
        id="macro-key-1"
      />
      <p>
        <span>
          carbs
        </span>
         130 of 280 grams
      </p>
    </div>
    <div
      className="macro-tracker__macro"
      key="fat"
    >
      <div
        className="macro-tracker__macro-key"
        id="macro-key-2"
      />
      <p>
        <span>
          fat
        </span>
         80 of 80 grams
      </p>
    </div>
  </div>
  <Button
    clickHandler={[Function]}
    disabled={false}
    type="button"
    variant="primary"
  >
    Add macros
  </Button>
  <Button
    clickHandler={[Function]}
    disabled={false}
    type="button"
    variant=""
  >
    reset macros
  </Button>
  <div
    className="macro-tracker__overlay card__overlay  card__overlay--hidden"
  >
    <UpdateMacroForm
      closeForm={[Function]}
      updateMacro={[Function]}
    />
  </div>
  <div
    className="macro-tracker__overlay card__overlay  card__overlay--hidden macro-tracker__menu"
  >
    <p>
      Update Target Macros
    </p>
    <SetMacrosForm
      current={
        Object {
          "carbs": 280,
          "fat": 80,
          "protein": 340,
        }
      }
      submitMacros={[Function]}
    />
    <div
      className="macro-tracker__menu-bottom"
    >
      <Button
        clickHandler={[Function]}
        disabled={false}
        type="button"
        variant=""
      >
        Close Menu
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render Macro Tracker with required props 1`] = `
<div
  className="macro-tracker card"
>
  <div
    className="macro-tracker__header"
  >
    <h2>
      Macros
    </h2>
    <button
      className="macro-tracker__menu-button"
      onClick={[Function]}
      type="button"
    >
      <DotsIcon
        fill="#fff"
        size={24}
      />
    </button>
  </div>
  <PieChart
    data={
      Array [
        Object {
          "amount": 0,
          "macro": "protein",
        },
        Object {
          "amount": 0,
          "macro": "carbs",
        },
        Object {
          "amount": 0,
          "macro": "fat",
        },
      ]
    }
  />
  <div
    className="macro-tracker__macros"
  >
    <div
      className="macro-tracker__macro"
      key="protein"
    >
      <div
        className="macro-tracker__macro-key"
        id="macro-key-0"
      />
      <p>
        <span>
          protein
        </span>
         0 of 0 grams
      </p>
    </div>
    <div
      className="macro-tracker__macro"
      key="carbs"
    >
      <div
        className="macro-tracker__macro-key"
        id="macro-key-1"
      />
      <p>
        <span>
          carbs
        </span>
         0 of 0 grams
      </p>
    </div>
    <div
      className="macro-tracker__macro"
      key="fat"
    >
      <div
        className="macro-tracker__macro-key"
        id="macro-key-2"
      />
      <p>
        <span>
          fat
        </span>
         0 of 0 grams
      </p>
    </div>
  </div>
  <Button
    clickHandler={[Function]}
    disabled={false}
    type="button"
    variant="primary"
  >
    Add macros
  </Button>
  <Button
    clickHandler={[Function]}
    disabled={false}
    type="button"
    variant=""
  >
    reset macros
  </Button>
  <div
    className="macro-tracker__overlay card__overlay  card__overlay--hidden"
  >
    <UpdateMacroForm
      closeForm={[Function]}
      updateMacro={[Function]}
    />
  </div>
  <div
    className="macro-tracker__overlay card__overlay  card__overlay--hidden macro-tracker__menu"
  >
    <p>
      Update Target Macros
    </p>
    <SetMacrosForm
      current={
        Object {
          "carbs": 0,
          "fat": 0,
          "protein": 0,
        }
      }
      submitMacros={[Function]}
    />
    <div
      className="macro-tracker__menu-bottom"
    >
      <Button
        clickHandler={[Function]}
        disabled={false}
        type="button"
        variant=""
      >
        Close Menu
      </Button>
    </div>
  </div>
</div>
`;
